2011-07-07  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * Started working on overlap and enclose iterator. It seems overlap are
        trickier to implement than I suspected.

        * Modified the compilation parameters to make it even more strict. No
        more shadowing of variables, and not more implicit converstion of
        types.

2011-06-16  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * src/bits/spatial_mapping.tpp fixed an issue with lower_bound and
        upper_bound functions. Wrong initialization of 'best' pointer. Somehow
        it has slipt uncaught until now.

2011-06-14  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * Added support for Microsoft Visual Studio 9.0. Generation of unit
        test file is working and fixed most compilation issues (some remain).

        * src/bits/spatial_details.hpp Removed unnecessary match function,
        acting as an alias for predicate.

2011-06-13  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * Added neighbor_iterable capability to *_pointset family of
        containers.

        * Fixed range_views compilation issues and added unit tests.

        * Changed use of view:: namespace for neighbor view. New type is named
        neighbor_view to follow the naming convention adopted in Boost.

2011-06-12  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * Changed use of view:: namespace for range view. New type is named
        range_view to follow the naming convention adopted in Boost.

        * Changed use of view:: namespace for mapping view. New type is named
        mapping_view to follow the naming convention adopted in Boost.

        * Fixed an issue with copy and assignment constructor on
        Relaxed_kdtree. The weight of the root node was not copied.

        * Added pointset and frozen_pointset family of contaners. Finally
        reaching point of completion for basic types. Now need to add more